--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,9 @@ jobs:
     - run: go run . > dist/index.html
       env:
         OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
+        LOCATION: "Australia/Melbourne"
+        LAT: "-37.840935"
+        LONG: "144.946457"
     - name: Deploy to GitHub Pages
       if: github.ref == 'refs/heads/main'
       uses: qoomon/deploy-to-github-pages-action@v1
